set up the template

--- a/index.html
+++ b/index.html
@@ -3,7 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lone Template One</title>
+    <!-- Render All Elements Normally -->
+    <link rel="stylesheet" href="assets/css/normalize.css" />
+    <!-- Font Awesome Link -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+    />
+    <!-- Style Css File -->
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <title>Leon Template One</title>
   </head>
   <body></body>
 </html>
