--- a/index.html
+++ b/index.html
@@ -14,5 +14,27 @@
     <link rel="stylesheet" href="assets/css/style.css" />
     <title>Leon Template One</title>
   </head>
-  <body></body>
+  <body>
+    <!-- Start Header -->
+    <header>
+      <div class="container">
+        <img class="logo" src="assets/images/logo.png" alt="logo" />
+        <nav class="links">
+          <span class="icon">
+            <span></span>
+            <span></span>
+            <span></span>
+          </span>
+
+          <ul>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <!-- End Header -->
+  </body>
 </html>
