created landing section

--- a/index.html
+++ b/index.html
@@ -36,5 +36,14 @@
       </div>
     </header>
     <!-- End Header -->
+
+    <!-- Start Landing -->
+    <section class="landing">
+      <div class="intro-text">
+        <h1>Hello There</h1>
+        <p>We are Leon - Super Creative & Minimal Agency Web Template</p>
+      </div>
+    </section>
+    <!-- End Landing -->
   </body>
 </html>
