created features section

--- a/index.html
+++ b/index.html
@@ -45,5 +45,36 @@
       </div>
     </section>
     <!-- End Landing -->
+
+    <!-- Start Features -->
+    <section class="features">
+      <div class="container">
+        <div class="box">
+          <i class="fa-solid fa-wand-magic-sparkles fa-3x"></i>
+          <h3>Tell Us Your Idea</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut lab
+          </p>
+        </div>
+        <div class="box">
+          <i class="fa-regular fa-gem fa-3x"></i>
+          <h3>We Will Do All The Work</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut lab
+          </p>
+        </div>
+        <div class="box">
+          <i class="fa-solid fa-earth-asia fa-3x"></i>
+          <h3>Your Product is Worldwide</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut lab
+          </p>
+        </div>
+      </div>
+    </section>
+    <!-- End Features -->
   </body>
 </html>
