created about section

--- a/index.html
+++ b/index.html
@@ -187,5 +187,36 @@
       </div>
     </section>
     <!-- End Portfolio -->
+
+        <!-- Start About -->
+        <section class="about" id="about">
+          <div class="container">
+            <h2 class="special-heading">About</h2>
+            <p>Less is more work</p>
+            <div class="content">
+              <div class="image">
+                <img src="/images/about.jpg" alt="" />
+              </div>
+              <div class="text">
+                <p>
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia
+                  repudiandae amet laboriosam totam aliquid distinctio consectetur
+                  quo, assumenda enim obcaecati aliquam, quidem velit sapiente porro
+                  dolorem incidunt rerum repellat rem.
+                </p>
+    
+                <hr />
+    
+                <p>
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut
+                  molestiae modi dolorem laboriosam, at debitis minima omnis. Ex
+                  animi unde eius quia voluptate libero vel quas. Tempore labore
+                  veritatis optio?
+                </p>
+              </div>
+            </div>
+          </div>
+        </section>
+        <!-- End About -->
   </body>
 </html>
