--- a/index.html
+++ b/index.html
@@ -218,5 +218,26 @@
           </div>
         </section>
         <!-- End About -->
+
+            <!-- Start Contact -->
+    <div class="contact" id="contact">
+      <div class="container">
+        <h2 class="special-heading">Contact</h2>
+        <p>We are born to create</p>
+      </div>
+      <div class="info">
+        <p class="label">Feel free to drop us a line at:</p>
+        <a class="link" href="mailto:leonagency@mail.com?subject=Contact"
+          >leonagency@mail.com</a
+        >
+        <div class="social">
+          Find Us On Social Networks
+          <i class="fab fa-youtube"></i>
+          <i class="fab fa-facebook-f"></i>
+          <i class="fab fa-twitter"></i>
+        </div>
+      </div>
+    </div>
+    <!-- End Contact -->
   </body>
 </html>
